--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -1,1 +1,16 @@
 @import "variables";
+
+:global(*) {
+    box-sizing: border-box;
+}
+
+:global(html), :global(body) {
+    height: 100%;
+    background-color: $bg-color;
+}
+
+input, select, button {
+    padding: 10px;
+    border-radius: 5px;
+    border: 0;
+}
