--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -5,11 +5,14 @@
 }
 
 :global(html), :global(body) {
-    height: 100%;
     background-color: $bg-color;
 }
 
-input, select, button {
+:global(body) {
+    padding: 10px;
+}
+
+input, select, .button {
     padding: 10px;
     border-radius: 5px;
     border: 0;
