frontend designs, small api fixes

--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -1,2 +1,6 @@
+$font-color: #FFFFFF;
 $primary-color: #fb8500;
-$bg-color: #1a1d1e;
+$bg-primary: #212025;
+$bg-secondary: #333237;
+$grey: #606068;
+$grey-light: #AEAEAE;
